src/objects/Nokia_CPQ_Maintenance_type__mdt.object
<CustomObject>
    <description>The setting is used for creating a valuemap for maintenance type, portfolio &amp; maintenance accreditation.</description>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Default value for the associated scenario</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_LEO_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is LEO Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Pricing_Levels__c</fullName>
        <label>NokiaCPQ Maintenance Pricing Levels</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Portfolio__c</fullName>
        <label>NokiaCPQ Portfolio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Nokia CPQ Maintenance type</label>
    <listViews>
        <fullName>cpq_view</fullName>
        <columns>MasterLabel</columns>
        <columns>NokiaCPQ_Portfolio__c</columns>
        <columns>NokiaCPQ_Maintenance_Pricing_Levels__c</columns>
        <columns>Maintenance_Type__c</columns>
        <columns>Default_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>cpq view</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Nokia CPQ Maintenance types</pluralLabel>
</CustomObject>